# hyper-contact

./: .env  .gitignore  Cargo.toml  README.md  db.sql
migrations/2023-12-07-184204_todos/: up.sql
migrations/2023-12-08-180848_contacts/: down.sql  up.sql
src/: main.rs  schema.rs
src/app/: contacts.rs  health.rs  mod.rs
src/app/templates/: contacts.rs  mod.rs
src/db/: mod.rs
src/models/: contact.rs  mod.rs  todo.rs
templates/: base.html
templates/contacts/: delete.html  edit.html  index.html  new.html  show.html  table.html
