[package]
name = "todoList-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "serde", "serde-json"] }
askama_axum = "0.4.0"
axum = "0.7.2"
axum-test = "14.0.0"
diesel = { version = "2.1.4", features = ["sqlite"] }
dotenvy = "0.15.7"
serde = "1.0.193"
serde_derive = "1.0.193"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }